--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,9 @@
     android:versionCode="3"
     android:versionName="V1.0_Beta" >
 
-    <uses-sdk android:minSdkVersion="7" />
+    <uses-sdk
+        android:minSdkVersion="8"
+        android:targetSdkVersion="16" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -53,6 +55,10 @@
             </intent-filter>
         </receiver>
 
+        <activity
+            android:name=".home.IdentificationTabActivity"
+            android:screenOrientation="portrait" >
+        </activity>
         <activity
             android:name=".infomation.InfomationTabActivity"
             android:screenOrientation="portrait" >
