--- a/project.properties
+++ b/project.properties
@@ -7,6 +7,7 @@
 # "ant.properties", and override values to adapt the script to your
 # project structure.
 
+proguard.config=proguard.cfg
 # Project target.
 target=android-17
 android.library.reference.1=../TaoBaoBase
