--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -59,14 +59,19 @@
             android:value="true" />
 
         <activity
-            android:name="com.tianxia.lib.baseworld.main.MainTabFrame"
+            android:name=".StartActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan" >
+            android:theme="@android:style/Theme.NoTitleBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.tianxia.lib.baseworld.main.MainTabFrame"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" >
         </activity>
 
         <receiver android:name="com.tianxia.lib.baseworld.BaseBroadcastReceiver" >
