客户端版本升级（未完成），用户反馈

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -112,7 +112,7 @@
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name=".setting.SettingFeedbackActivity"
+            android:name=".setting.SettingsFeedbackActivity"
             android:screenOrientation="portrait" >
         </activity>
         <activity
