新版二级页，设置页

--- a/project.properties
+++ b/project.properties
@@ -10,4 +10,5 @@
 proguard.config=proguard.cfg
 # Project target.
 target=android-17
-android.library.reference.1=../TaoBaoBase
+android.library.reference.1=..\\TaoBaoBase
+android.library.reference.2=../android-uitableview
