--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -104,7 +104,7 @@
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name=".setting.SettingTabActivity"
+            android:name=".setting.SettingsTabActivity"
             android:screenOrientation="portrait" >
         </activity>
         <activity
